--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
     <div id="score"></div>
+    <div class="scorediv">
+    	Your Scores:
+    	<ul id="score-list"></ul>
+    </div>
 </body>
 </html>
